sse event source

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <h3 class="text-muted" translate="home.title">Users Administration</h3>
+    <h3 class="text-muted" translate="home.title">Front-end Application</h3>
     <p class="lead">
         <img width="256" height="256" src="images/users.png"></img>
     </p>
