--- a/partials/messages/chat.html
+++ b/partials/messages/chat.html
@@ -1,16 +1,37 @@
-<div class="row">
-    <div class="form-group">
-        <div class="col-md-10 col-lg-6">
-            <input type="text" class="form-control" placeholder="Compose a new message..." ng-model="message" />
+<div class="col-sm-6">
+    <label>Websocket with SockJS and Stomp</label>
+    <div class="row">
+        <div class="form-group">
+            <div class="col-sm-7">
+                <input type="text" class="form-control" placeholder="Compose a new message..." ng-model="message" />
+            </div>
+            <button class="btn btn-primary" ng-click="addMessage()" ng-disabled="message.length > max || message.length === 0">Send</button>
+            <button class="btn btn-default" ng-click="random()">Random</button>
         </div>
-        <button class="btn btn-primary" ng-click="addMessage()" ng-disabled="message.length > max || message.length === 0">Send</button>
-        <button class="btn btn-default" ng-click="random()">Random</button>
-    </div>
 
+    </div>
+    <div class="well well-sm" ng-show="messages.length">
+    <p ng-repeat="message in messages | orderBy:'time':true" class="message">
+        <time ng-class="{'text-primary': message.self}">{{message.time | date:'HH:mm'}}</time>
+        <span ng-class="{'text-primary': message.self}">{{message.message}}</span>
+    </p>
+    </div>
 </div>
-<div class="well well-sm" ng-show="messages.length">
-<p ng-repeat="message in messages | orderBy:'time':true" class="message">
-    <time ng-class="{'text-primary': message.self}">{{message.time | date:'HH:mm'}}</time>
-    <span ng-class="{'text-primary': message.self}">{{message.message}}</span>
-</p>
+<div class="col-sm-6">
+    <label>Websocket native</label>
+    <div class="row">
+        <div class="form-group">
+            <div class="col-sm-7">
+                <input type="text" class="form-control" placeholder="Compose a new message..." ng-model="input" />
+            </div>
+            <button class="btn btn-primary" ng-click="sendMessage()" ng-disabled="input.length === 0">Send</button>
+            <button class="btn btn-default" ng-click="randomMessage()">Random</button>
+        </div>
+
+    </div>
+    <div class="well well-sm" ng-show="mes.length">
+        <p ng-repeat="message in mes | orderBy:'time':true" class="message">
+            <span ng-class="{'text-primary': message.self}">{{message.data}}</span>
+        </p>
+    </div>
 </div>
